# anthropic-quickstarts

computer-use-demo/: pyproject.toml  windows_start.ps1
computer-use-demo/computer_use_demo/: loop.py  requirements.txt  streamlit.py
computer-use-demo/computer_use_demo/tools/: __init__.py  computer_windows.py
