[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computer_use_demo"
version = "0.1.0"
description = "Computer Use Demo for Claude"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["computer_use_demo"]

[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
